objects/PEPE_Training_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Costs__c</fullName>
        <description>It is the Sum of the values of Learning Partner Cost, Catering Vendor Agency Cost, VAT and DW Cost.</description>
        <formula>Learning_Partner_Cost__c + Catering_Vendor_Agency_Cost__c + VAT__c + DW_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the values of Learning Partner Cost, Catering Vendor Agency Cost, VAT and DW Cost.</inlineHelpText>
        <label>Actual Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Jan 2018 Release</description>
        <inlineHelpText>For APJ Use</inlineHelpText>
        <label>*Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_Time__c</fullName>
        <description>Jan 2018 Release</description>
        <inlineHelpText>For APJ Use</inlineHelpText>
        <label>*Actual End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>The start date updated in the workflow after the Learning Partners were contacted and dates are finalized.</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Time__c</fullName>
        <description>2018 Jan  Release</description>
        <inlineHelpText>For APJ Use</inlineHelpText>
        <label>*Actual Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_start_and_end_date_agreed__c</fullName>
        <description>Reference only as of now, no action necessarily taken on the alternate dates</description>
        <inlineHelpText>Reference only as of now, no action necessarily taken on the alternate dates</inlineHelpText>
        <label>Actual start and end date agreed ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Countries_Selected1__c</fullName>
        <description>Field created part of Apr FY15 release to get Additional Countries selected values for reporting purpose</description>
        <formula>IF(INCLUDES(Additional_Countries__c, "Austria"),"Austria;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Czech Republic"),"Czech Republic;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Poland"),"Poland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Germany"),"Germany;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Albania"),"Albania;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Bosnia and Herzegovina"),"Bosnia and Herzegovina;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Bulgaria"),"Bulgaria;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Croatia"),"Croatia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Hungary"),"Hungary;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Macedonia"),"Macedonia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Romania"),"Romania;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Serbia and Montenegro"),"Serbia and Montenegro;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Slovakia"),"Slovakia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Slovenia"),"Slovenia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Algeria"),"Algeria;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Angola"),"Angola;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Benin"),"Benin;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Botswana"),"Botswana;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Bouvet Island"),"Bouvet Island;","")&amp;
IF(INCLUDES(Additional_Countries__c, "British Indian Ocean Territory"),"British Indian Ocean Territory;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Burkina Faso"),"Burkina Faso;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Burundi"),"Burundi;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Cameroon"),"Cameroon;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Cape Verde"),"Cape Verde;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Central African Republic"),"Central African Republic;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Chad"),"Chad;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Comoros"),"Comoros;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Congo, D.R."),"Congo, D.R.;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Congo (Brazzaville)"),"Congo (Brazzaville);","")&amp;
IF(INCLUDES(Additional_Countries__c, "Congo Dem"),"Congo Dem;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Cote d'Ivoire"),"Cote d'Ivoire;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Djibouti"),"Djibouti;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Egypt"),"Egypt;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Equatorial Guinea"),"Equatorial Guinea;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Eritrea"),"Eritrea;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Ethiopia"),"Ethiopia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Gabon"),"Gabon;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Gambia"),"Gambia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Ghana"),"Ghana;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Guinea"),"Guinea;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Guinea-Bissau"),"Guinea-Bissau;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Kenya"),"Kenya;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Liberia"),"Liberia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Libya"),"Libya;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Liechtenstein"),"Liechtenstein;","")</formula>
        <label>Additional Countries Selected1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Countries_Selected2__c</fullName>
        <description>Field created part of Apr FY15 release to get Additional Countries selected values for reporting purpose</description>
        <formula>IF(INCLUDES(Additional_Countries__c, "Madagascar"),"Madagascar;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Malawi"),"Malawi;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Mali"),"Mali;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Mauritania"),"Mauritania;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Mauritius"),"Mauritius;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Morocco"),"Morocco;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Mozambique"),"Mozambique;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Namibia"),"Namibia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Niger"),"Niger;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Nigeria"),"Nigeria;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Reunion"),"Reunion;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Rwanda"),"Rwanda;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Sao Tome And Principe"),"Sao Tome And Principe;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Senegal"),"Senegal;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Seychelles"),"Seychelles;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Sierra Leone"),"Sierra Leone;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Somalia"),"Somalia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Sudan"),"Sudan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Tanzania"),"Tanzania;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Togo"),"Togo;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Tunisia"),"Tunisia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Uganda"),"Uganda;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Western Sahara"),"Western Sahara;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Zambia"),"Zambia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Zimbabwe"),"Zimbabwe;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Afghanistan"),"Afghanistan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Bahrain"),"Bahrain;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Iran"),"Iran;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Iraq"),"Iraq;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Jordan"),"Jordan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Oman"),"Oman;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Pakistan"),"Pakistan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Palestine"),"Palestine;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Qatar"),"Qatar;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Syria"),"Syria;","")&amp;
IF(INCLUDES(Additional_Countries__c, "UAE"),"UAE;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Yemen"),"Yemen;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Armenia"),"Armenia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Azerbaijan"),"Azerbaijan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Belarus"),"Belarus;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Georgia"),"Georgia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Kazakhstan"),"Kazakhstan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Latvia"),"Latvia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Tajikistan"),"Tajikistan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Turkmenistan"),"Turkmenistan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Ukraine"),"Ukraine;","")</formula>
        <label>Additional Countries Selected2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Countries_Selected3__c</fullName>
        <description>Field created part of Apr FY15 release to get Additional Countries selected values for reporting purpose</description>
        <formula>IF(INCLUDES(Additional_Countries__c, "Uzbekistan"),"Uzbekistan;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Lesotho"),"Lesotho;","")&amp;
IF(INCLUDES(Additional_Countries__c, "South Africa"),"South Africa;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Swaziland"),"Swaziland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Ksa"),"Ksa;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Turkey"),"Turkey;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Belgium"),"Belgium;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Luxembourg"),"Luxembourg;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Denmark"),"Denmark;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Greenland"),"Greenland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Estonia"),"Estonia;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Finland"),"Finland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Lebanon"),"Lebanon;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Lithuania"),"Lithuania;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Sweden"),"Sweden;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Netherlands"),"Netherlands;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Iceland"),"Iceland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Norway"),"Norway;","")&amp;
IF(INCLUDES(Additional_Countries__c, "France"),"France;","")&amp;
IF(INCLUDES(Additional_Countries__c, "French Southern Territories"),"French Southern Territories;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Mayotte"),"Mayotte;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Monaco"),"Monaco;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Italy"),"Italy;","")&amp;
IF(INCLUDES(Additional_Countries__c, "San Marino"),"San Marino;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Vatican City"),"Vatican City;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Cyprus"),"Cyprus;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Greece"),"Greece;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Malta"),"Malta;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Israel"),"Israel;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Portugal"),"Portugal;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Spain"),"Spain;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Faroe Islands"),"Faroe Islands;","")&amp;
IF(INCLUDES(Additional_Countries__c, "Ireland"),"Ireland;","")&amp;
IF(INCLUDES(Additional_Countries__c, "United Kingdom"),"United Kingdom;","")</formula>
        <label>Additional Countries Selected3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Countries__c</fullName>
        <label>Additional Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Macedonia</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Serbia and Montenegro</fullName>
                </value>
                <value>
                    <fullName>Slovakia</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Congo Dem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Country host enters details against main event for address 1 proposal.</description>
        <inlineHelpText>Please insert full address in one line divided by commas. Eg: 30 &amp; 31 Floors, Millennium Tower, Handelskai 94 - 96, VIENNA, WIEN A-1200, AUSTRIA</inlineHelpText>
        <label>Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Host provides address 2 here</description>
        <label>Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Host enters address 3 details for requesting agianst main event</description>
        <label>Address 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>Agenda associated with the Training</description>
        <label>Agenda</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alfresco_Id__c</fullName>
        <label>Alfresco Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Address_1__c</fullName>
        <label>Alternate Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Address_2__c</fullName>
        <label>Alternate Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Address_3__c</fullName>
        <label>Alternate Address 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_End_date__c</fullName>
        <label>Alternate End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <description>This will contain the Alternate Language.</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Alternate Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_date__c</fullName>
        <label>Alternate Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Training_location_City__c</fullName>
        <label>Alternate City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Tranining_location_Addess__c</fullName>
        <description>changed location will be updated in the Training Event</description>
        <inlineHelpText>Changed location will be updated in the Training Event</inlineHelpText>
        <label>Alternate Training location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Tranining_location_Address__c</fullName>
        <description>changed location will be updated in the Training Event</description>
        <inlineHelpText>Changed location will be updated in the Training Event</inlineHelpText>
        <label>Alternate Training location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Zip_Code__c</fullName>
        <label>Alternate Zip Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ansira_Activity_Ids__c</fullName>
        <inlineHelpText>Please add Ansira Activity Id as per the example 

ex. 202486 , 202676 , 202847</inlineHelpText>
        <label>Ansira Activity Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Architecture_Event_Type__c</fullName>
        <description>This image gives you some additional info of the type of the event</description>
        <formula>IF( 
ISPICKVAL( Training_Offering_Id__r.Type_of_Architecture_Event__c , 'Standard Remote')|| 
ISPICKVAL( Training_Offering_Id__r.Type_of_Architecture_Event__c , 'Multiple Sessions Remote'), 
'Remote Event', 

IF(ISPICKVAL( Training_Offering_Id__r.Type_of_Architecture_Event__c , 'Standard Live')|| 
ISPICKVAL( Training_Offering_Id__r.Type_of_Architecture_Event__c , 'Multiple Sessions Live'), 
'Live Event', 

"Red") 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Architecture Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <description>This field displays the 'Architecture' selected in Parent Training Event.</description>
        <formula>TEXT(Training_Offering_Id__r.Architecture__c)</formula>
        <label>Primary Architecture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>Parent archive date for architectures</description>
        <formula>Training_Offering_Id__r.Archive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Indicates the target audience for whom the event is set up. The target audience can be differentiated their job role such as Sales, Technical, Marketing and Executive</description>
        <formula>TEXT(Training_Offering_Id__r.Audience_new__c)</formula>
        <label>Audience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Flag__c</fullName>
        <description>This is to make the host decide likes to fire the blp workflow for his/her requests</description>
        <inlineHelpText>ADMIN can override this field. This flag is set by default as "Yes" if Training event, delivery team field has 'Cisco Learning Partner'</inlineHelpText>
        <label>BLP Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Allocated__c</fullName>
        <description>Budget allocated for the country cluster for the Quarter the training  was been set up for.</description>
        <label>Budget Allocated</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Department_number__c</fullName>
        <description>Budget Department number is captured</description>
        <label>Budget Department number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Management</label>
        <referenceTo>PEPE_Budget_Management__c</referenceTo>
        <relationshipLabel>Training Requests</relationshipLabel>
        <relationshipName>Training_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Quarter__c</fullName>
        <description>Budget Quarter</description>
        <label>Budget Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 FY13</fullName>
                </value>
                <value>
                    <fullName>Q2 FY13</fullName>
                </value>
                <value>
                    <fullName>Q3 FY13</fullName>
                </value>
                <value>
                    <fullName>Q4 FY13</fullName>
                </value>
                <value>
                    <fullName>Q1 FY14</fullName>
                </value>
                <value>
                    <fullName>Q2 FY14</fullName>
                </value>
                <value>
                    <fullName>Q3 FY14</fullName>
                </value>
                <value>
                    <fullName>Q4 FY14</fullName>
                </value>
                <value>
                    <fullName>Q1 FY15</fullName>
                </value>
                <value>
                    <fullName>Q2 FY15</fullName>
                </value>
                <value>
                    <fullName>Q3 FY15</fullName>
                </value>
                <value>
                    <fullName>Q4 FY15</fullName>
                </value>
                <value>
                    <fullName>Q1 FY16</fullName>
                </value>
                <value>
                    <fullName>Q2 FY16</fullName>
                </value>
                <value>
                    <fullName>Q3 FY16</fullName>
                </value>
                <value>
                    <fullName>Q4 FY16</fullName>
                </value>
                <value>
                    <fullName>Q1 FY17</fullName>
                </value>
                <value>
                    <fullName>Q2 FY17</fullName>
                </value>
                <value>
                    <fullName>Q3 FY17</fullName>
                </value>
                <value>
                    <fullName>Q4 FY17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_CVENT_Code__c</fullName>
        <description>This field will indicate the CVENT ID for the TR., modified API name part of APR FY15 release</description>
        <label>CVENT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_CVENT_Flag__c</fullName>
        <description>This field will indicate the CVENT Flag for the TR, modified API name part of Apr FY15 release</description>
        <label>Integrate with CVENT?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_CVENT_ID__c</fullName>
        <description>This field contain CVENT code for TR</description>
        <label>CVENT ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_CVENT_Session_Id__c</fullName>
        <description>this field is for fetching data from cvent for the record purpose</description>
        <label>CVENT Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_CVENT_Session_Name__c</fullName>
        <description>this field is for fetching data from Cvent for the record purpose</description>
        <label>CVENT Session Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CI_Created_Status__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Created Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Created_date__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Error_code__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>Error code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Modified_Status__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Modified Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>